--- a/components/detail/feedback-block.html
+++ b/components/detail/feedback-block.html
@@ -981,6 +981,16 @@
         
         
         <li class="Tree-item Tree-entity" data-role="item">
+            <a class="Tree-entityLink" href="radio-btn" data-pjax>
+                <span>Radio Btn</span>
+                
+            </a>
+        </li>
+        
+    
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
             <a class="Tree-entityLink" href="review-author" data-pjax>
                 <span>Review Author</span>
                 
