--- a/components/render/checkbox-btn.html
+++ b/components/render/checkbox-btn.html
@@ -1,10 +1,6 @@
 
 
 <div class="checkbox-btn">
-    <input type="radio" id=test name=test value=1>
-    <label for=test>Unchecked</label>
-</div>
-<div class="checkbox-btn">
-    <input type="radio" id=test name=test checked="checked" value=1>
-    <label for=test>Checked</label>
+    <input type="checkbox" id=test name=test checked="checked" value=1>
+    <label for=test>test</label>
 </div>
