--- a/components/detail/radio-btn.html
+++ b/components/detail/radio-btn.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="../../assets/styles/theme.css?cachebust=1.2.0" type="text/css">
 
 
-<title>Чекбокс в виде кнопки | RUM Components Guide</title>
+<title>Радиобаттон в виде кнопки | RUM Components Guide</title>
 
 </head>
 <body>
@@ -54,14 +54,14 @@
     
     
 
-<div class="Pen" data-behaviour="pen" id="pen-ed18cc3d133969f32631de7a329b6720">
+<div class="Pen" data-behaviour="pen" id="pen-344c36696af3800516e044752b3637a6">
 
     
 
     <div class="Pen-panel Pen-header">
     <h1 class="Pen-title">
-        <a class="Pen-previewLink" href="../preview/checkbox-btn" title="Component preview">
-            Чекбокс в виде кнопки
+        <a class="Pen-previewLink" href="../preview/radio-btn" title="Component preview">
+            Радиобаттон в виде кнопки
             <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 0h24v24H0z" fill="none"/>
     <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
@@ -75,14 +75,14 @@
 </div>
 
 
-    <div class="Pen-panel Pen-preview Preview" data-behaviour="preview" id="preview-ed18cc3d133969f32631de7a329b6720">
+    <div class="Pen-panel Pen-preview Preview" data-behaviour="preview" id="preview-344c36696af3800516e044752b3637a6">
     <div class="Preview-wrapper" data-role="resizer">
         <div class="Preview-resizer">
             
              <iframe
                 class="Preview-iframe"
                 data-role="window"
-                src="../preview/checkbox-btn"
+                src="../preview/radio-btn"
                 sandbox="allow-same-origin allow-scripts allow-forms"
                  style=""
                 marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0" scrolling="yes">
@@ -97,7 +97,7 @@
     <div class="Pen-handle Pen-handle--browser" data-role="resize-handle"></div>
 
     <div class="Pen-panel Pen-info" data-role="info">
-    <div class="Browser" data-behaviour="browser" id="browser-ed18cc3d133969f32631de7a329b6720">
+    <div class="Browser" data-behaviour="browser" id="browser-344c36696af3800516e044752b3637a6">
 
     
 
@@ -106,19 +106,19 @@
         
         
         <li class="Browser-tab Browser-tab--html is-active " data-role="tab">
-            <a href="#browser-ed18cc3d133969f32631de7a329b6720-panel-html">HTML</a>
+            <a href="#browser-344c36696af3800516e044752b3637a6-panel-html">HTML</a>
         </li>
         
         
         
         <li class="Browser-tab Browser-tab--view" data-role="tab">
-            <a href="#browser-ed18cc3d133969f32631de7a329b6720-panel-view">View</a>
+            <a href="#browser-344c36696af3800516e044752b3637a6-panel-view">View</a>
         </li>
         
         
         
         <li class="Browser-tab Browser-tab--context" data-role="tab">
-            <a href="#browser-ed18cc3d133969f32631de7a329b6720-panel-context">Context</a>
+            <a href="#browser-344c36696af3800516e044752b3637a6-panel-context">Context</a>
         </li>
         
         
@@ -126,7 +126,7 @@
         
         
         <li class="Browser-tab Browser-tab--resources" data-role="tab">
-            <a href="#browser-ed18cc3d133969f32631de7a329b6720-panel-assets">Assets</a>
+            <a href="#browser-344c36696af3800516e044752b3637a6-panel-assets">Assets</a>
         </li>
         
         
@@ -134,13 +134,13 @@
         
         
         <li class="Browser-tab Browser-tab--info" data-role="tab">
-            <a href="#browser-ed18cc3d133969f32631de7a329b6720-panel-info">Info</a>
+            <a href="#browser-344c36696af3800516e044752b3637a6-panel-info">Info</a>
         </li>
         
         
         
         <li class="Browser-tab Browser-tab--notes" data-role="tab">
-            <a href="#browser-ed18cc3d133969f32631de7a329b6720-panel-notes">Notes</a>
+            <a href="#browser-344c36696af3800516e044752b3637a6-panel-notes">Notes</a>
         </li>
         
         
@@ -150,29 +150,37 @@
 
     
     
-<div class="Browser-panel Browser-code is-active" data-role="tab-panel" id="browser-ed18cc3d133969f32631de7a329b6720-panel-html">
+<div class="Browser-panel Browser-code is-active" data-role="tab-panel" id="browser-344c36696af3800516e044752b3637a6-panel-html">
     <code class="Code Code--lang-html">
         
         <pre><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"checkbox-btn"</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">input</span> <span class="hljs-attr">type</span>=<span class="hljs-string">"checkbox"</span> <span class="hljs-attr">id</span>=<span class="hljs-string">test</span> <span class="hljs-attr">name</span>=<span class="hljs-string">test</span> <span class="hljs-attr">checked</span>=<span class="hljs-string">"checked"</span> <span class="hljs-attr">value</span>=<span class="hljs-string">1</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">label</span> <span class="hljs-attr">for</span>=<span class="hljs-string">test</span>&gt;</span>test<span class="hljs-tag">&lt;/<span class="hljs-name">label</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">input</span> <span class="hljs-attr">type</span>=<span class="hljs-string">"radio"</span> <span class="hljs-attr">id</span>=<span class="hljs-string">test</span> <span class="hljs-attr">name</span>=<span class="hljs-string">test</span> <span class="hljs-attr">checked</span>=<span class="hljs-string">"checked"</span> <span class="hljs-attr">value</span>=<span class="hljs-string">1</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">label</span> <span class="hljs-attr">for</span>=<span class="hljs-string">test</span>&gt;</span>checked<span class="hljs-tag">&lt;/<span class="hljs-name">label</span>&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"checkbox-btn"</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">input</span> <span class="hljs-attr">type</span>=<span class="hljs-string">"radio"</span> <span class="hljs-attr">id</span>=<span class="hljs-string">test</span> <span class="hljs-attr">name</span>=<span class="hljs-string">test</span> <span class="hljs-attr">value</span>=<span class="hljs-string">1</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">label</span> <span class="hljs-attr">for</span>=<span class="hljs-string">test</span>&gt;</span>Unchecked<span class="hljs-tag">&lt;/<span class="hljs-name">label</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span></pre>
         
     </code>
 </div>
 
     
-    <div class="Browser-panel Browser-code" data-role="tab-panel" id="browser-ed18cc3d133969f32631de7a329b6720-panel-view">
+    <div class="Browser-panel Browser-code" data-role="tab-panel" id="browser-344c36696af3800516e044752b3637a6-panel-view">
     <code class="Code Code--lang-html">
         <pre><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"checkbox-btn"</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">input</span> <span class="hljs-attr">type</span>=<span class="hljs-string">"checkbox"</span> <span class="hljs-attr">id</span>=<span class="hljs-string">{{id}}</span> <span class="hljs-attr">name</span>=<span class="hljs-string">{{name}}</span> <span class="hljs-attr">checked</span>=<span class="hljs-string">"checked"</span> <span class="hljs-attr">value</span>=<span class="hljs-string">{{value}}</span>&gt;</span>
-    <span class="hljs-tag">&lt;<span class="hljs-name">label</span> <span class="hljs-attr">for</span>=<span class="hljs-string">{{id}}</span>&gt;</span>{{text}}<span class="hljs-tag">&lt;/<span class="hljs-name">label</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">input</span> <span class="hljs-attr">type</span>=<span class="hljs-string">"radio"</span> <span class="hljs-attr">id</span>=<span class="hljs-string">{{id}}</span> <span class="hljs-attr">name</span>=<span class="hljs-string">{{name}}</span> <span class="hljs-attr">checked</span>=<span class="hljs-string">"checked"</span> <span class="hljs-attr">value</span>=<span class="hljs-string">{{value}}</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">label</span> <span class="hljs-attr">for</span>=<span class="hljs-string">{{id}}</span>&gt;</span>checked<span class="hljs-tag">&lt;/<span class="hljs-name">label</span>&gt;</span>
+<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span>
+<span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"checkbox-btn"</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">input</span> <span class="hljs-attr">type</span>=<span class="hljs-string">"radio"</span> <span class="hljs-attr">id</span>=<span class="hljs-string">{{id}}</span> <span class="hljs-attr">name</span>=<span class="hljs-string">{{name}}</span> <span class="hljs-attr">value</span>=<span class="hljs-string">{{value}}</span>&gt;</span>
+    <span class="hljs-tag">&lt;<span class="hljs-name">label</span> <span class="hljs-attr">for</span>=<span class="hljs-string">{{id}}</span>&gt;</span>Unchecked<span class="hljs-tag">&lt;/<span class="hljs-name">label</span>&gt;</span>
 <span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span></pre>
     </code>
 </div>
 
     
-    <div class="Browser-panel Browser-code" data-role="tab-panel" id="browser-ed18cc3d133969f32631de7a329b6720-panel-context">
+    <div class="Browser-panel Browser-code" data-role="tab-panel" id="browser-344c36696af3800516e044752b3637a6-panel-context">
     <code class="Code Code--lang-json">
         
             
@@ -191,20 +199,20 @@
     
 
 
-<div class="Browser-panel Browser-resources" data-role="tab-panel" id="browser-ed18cc3d133969f32631de7a329b6720-panel-assets">
+<div class="Browser-panel Browser-resources" data-role="tab-panel" id="browser-344c36696af3800516e044752b3637a6-panel-assets">
     <div class="FileBrowser">
 
         <div class="FileBrowser-selectWrapper">
             <label class="FileBrowser-select-label" for="filebrowser-select">File:</label>
             <select class="FileBrowser-select" id="filebrowser-select">
                 
-                <option value="file-77dd7b515f847c82c7bf3eee2bdbe2bc">checkbox-btn.css</option>
+                <option value="file-bb3db212544fbd5e34638737c5fade54">radio-btn.css</option>
                 
             </select>
         </div>
 
         
-        <div class="FileBrowser-item is-active" id="file-77dd7b515f847c82c7bf3eee2bdbe2bc" data-role="resource-preview">
+        <div class="FileBrowser-item is-active" id="file-bb3db212544fbd5e34638737c5fade54" data-role="resource-preview">
             <ul class="Meta">
                 <li class="Meta-item">
                     <strong class="Meta-key">Content:</strong>
@@ -275,11 +283,11 @@
                 </li>
                 <li class="Meta-item">
                     <strong class="Meta-key">URL:</strong>
-                    <span class="Meta-value"><a data-no-pjax href="../raw/checkbox-btn/checkbox-btn.css"><span>/components/raw/checkbox-btn/checkbox-btn.css</span></a></span>
+                    <span class="Meta-value"><a data-no-pjax href="../raw/radio-btn/radio-btn.css"><span>/components/raw/radio-btn/radio-btn.css</span></a></span>
                 </li>
                 <li class="Meta-item">
                     <strong class="Meta-key">Filesystem Path:</strong>
-                    <span class="Meta-value">src\components\checkbox-btn\checkbox-btn.css</span>
+                    <span class="Meta-value">src\components\radio-btn\radio-btn.css</span>
                 </li>
                 <li class="Meta-item">
                     <strong class="Meta-key">Size:</strong>
@@ -294,11 +302,11 @@
 
 
     
-    <div class="Browser-panel" data-role="tab-panel" id="browser-ed18cc3d133969f32631de7a329b6720-panel-info">
+    <div class="Browser-panel" data-role="tab-panel" id="browser-344c36696af3800516e044752b3637a6-panel-info">
     <ul class="Meta">
         <li class="Meta-item">
             <strong class="Meta-key">Handle:</strong>
-            <span class="Meta-value">@checkbox-btn</span>
+            <span class="Meta-value">@radio-btn</span>
         </li>
         
         
@@ -309,12 +317,12 @@
             <strong class="Meta-key">Preview:</strong>
             <span class="Meta-value">
                 <ul>
-                    <li><a data-no-pjax href="../preview/checkbox-btn"><span>With layout</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+                    <li><a data-no-pjax href="../preview/radio-btn"><span>With layout</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 0h24v24H0z" fill="none"/>
     <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
 </svg>
 </a></li>
-                    <li><a data-no-pjax href="../render/checkbox-btn"><span>Component only</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+                    <li><a data-no-pjax href="../render/radio-btn"><span>Component only</span> <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 0h24v24H0z" fill="none"/>
     <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
 </svg>
@@ -324,7 +332,7 @@
         </li>
         <li class="Meta-item">
             <strong class="Meta-key">Filesystem Path:</strong>
-            <span class="Meta-value">src\components\checkbox-btn\checkbox-btn.html</span>
+            <span class="Meta-value">src\components\radio-btn\radio-btn.html</span>
         </li>
         
         
@@ -332,10 +340,10 @@
 </div>
 
     
-    <div class="Browser-panel Browser-notes" data-role="tab-panel" id="browser-ed18cc3d133969f32631de7a329b6720-panel-notes">
+    <div class="Browser-panel Browser-notes" data-role="tab-panel" id="browser-344c36696af3800516e044752b3637a6-panel-notes">
     <div class="Prose Prose--condensed">
         
-        <p>Чекбокс в виде кнопки. Если в поле “type” поставить radio, а в поле “name” указать одно пространство имен, получим радиокнопку. </p>
+        <p>Радиокнопка. По структуре то же самое что и чекбокс в виде</p>
 
         
     </div>
@@ -371,8 +379,8 @@
     
         
         
-        <li class="Tree-item Tree-entity is-current" data-state="current" data-role="item">
-            <a class="Tree-entityLink" href="" data-pjax>
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a class="Tree-entityLink" href="checkbox-btn" data-pjax>
                 <span>Checkbox Btn</span>
                 
             </a>
@@ -391,8 +399,8 @@
     
         
         
-        <li class="Tree-item Tree-entity" data-role="item">
-            <a class="Tree-entityLink" href="radio-btn" data-pjax>
+        <li class="Tree-item Tree-entity is-current" data-state="current" data-role="item">
+            <a class="Tree-entityLink" href="" data-pjax>
                 <span>Radio Btn</span>
                 
             </a>
