--- a/components/detail/review-author.html
+++ b/components/detail/review-author.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="../../assets/styles/theme.css?cachebust=1.2.0" type="text/css">
 
 
-<title>Автор чего либо | RUM Components Guide</title>
+<title>Блок с инфой об авторе | RUM Components Guide</title>
 
 </head>
 <body>
@@ -61,7 +61,7 @@
     <div class="Pen-panel Pen-header">
     <h1 class="Pen-title">
         <a class="Pen-previewLink" href="../preview/review-author" title="Component preview">
-            Автор чего либо
+            Блок с инфой об авторе
             <svg fill="#000000" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 0h24v24H0z" fill="none"/>
     <path d="M19 4H5c-1.11 0-2 .9-2 2v12c0 1.1.89 2 2 2h4v-2H5V8h14v10h-4v2h4c1.1 0 2-.9 2-2V6c0-1.1-.89-2-2-2zm-7 6l-4 4h3v6h2v-6h3l-4-4z"/>
@@ -398,6 +398,16 @@
         <li class="Tree-item Tree-entity" data-role="item">
             <a class="Tree-entityLink" href="feedback-block" data-pjax>
                 <span>Feedback Block</span>
+                
+            </a>
+        </li>
+        
+    
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a class="Tree-entityLink" href="radio-btn" data-pjax>
+                <span>Radio Btn</span>
                 
             </a>
         </li>
