--- a/components/preview/radio-btn.html
+++ b/components/preview/radio-btn.html
@@ -51,8 +51,12 @@
 
   <body>
     <div class="checkbox-btn">
-    <input type="checkbox" id=test name=test checked="checked" value=1>
-    <label for=test>test</label>
+    <input type="radio" id=test name=test checked="checked" value=1>
+    <label for=test>checked</label>
+</div>
+<div class="checkbox-btn">
+    <input type="radio" id=test name=test value=1>
+    <label for=test>Unchecked</label>
 </div>
   </body>
 </html>
