--- a/fractal/css/default.css
+++ b/fractal/css/default.css
@@ -4,6 +4,44 @@
  * 2. Correct the line height in all browsers.
  * 3. Prevent adjustments of font size after orientation changes in IE and iOS.
  */
+
+ @font-face {
+  font-family: roboto-light;
+  src: url(/fractal/fonts/roboto-light.eot?);
+  src: local(roboto-light), url(/fractal/fonts/roboto-light.eot?#iefix) format("embedded-opentype"),url(/fractal/fonts/roboto-light.woff2) format("woff2"), url(/fractal/fonts/roboto-light.woff) format("woff"), url(/fractal/fonts/roboto-light.ttf) format("truetype"), url(/fractal/fonts/roboto-light.svg#roboto-light) format("svg")
+}
+
+@font-face {
+  font-family: roboto-medium;
+  src: url(/fractal/fonts/roboto-medium.eot?);
+  src: local(roboto-medium), url(/fractal/fonts/roboto-medium.eot?#iefix) format("embedded-opentype"),url(/fractal/fonts/roboto-medium.woff2) format("woff2"), url(/fractal/fonts/roboto-medium.woff) format("woff"), url(/fractal/fonts/roboto-medium.ttf) format("truetype"), url(/fractal/fonts/roboto-medium.svg#roboto-medium) format("svg")
+}
+
+@font-face {
+  font-family: roboto-regular;
+  src: url(/fractal/fonts/roboto-regular.eot?);
+  src: local(roboto-regular), url(/fractal/fonts/roboto-regular.eot?#iefix) format("embedded-opentype"),url(/fractal/fonts/roboto-regular.woff2) format("woff2"), url(/fractal/fonts/roboto-regular.woff) format("woff"), url(/fractal/fonts/roboto-regular.ttf) format("truetype"), url(/fractal/fonts/roboto-regular.svg#roboto-regular) format("svg")
+}
+
+@font-face {
+  font-family: roboto-bold;
+  src: url(/fractal/fonts/roboto-bold.eot?);
+  src: local(roboto-bold), url(/fractal/fonts/roboto-bold.eot?#iefix) format("embedded-opentype"),url(/fractal/fonts/roboto-bold.woff2) format("woff2"), url(/fractal/fonts/roboto-bold.woff) format("woff"), url(/fractal/fonts/roboto-bold.ttf) format("truetype"), url(/fractal/fonts/roboto-bold.svg#roboto-bold) format("svg")
+}
+
+@font-face {
+  font-family: "Flaticon";
+  src: url("/fractal/fonts/flaticon.eot");
+  src: url("/fractal/fonts/flaticon.eot?#iefix") format("embedded-opentype"),
+  url("/fractal/fonts/flaticon.woff2") format("woff2"),
+  url("/fractal/fonts/flaticon.woff") format("woff"),
+  url("/fractal/fonts/flaticon.ttf") format("truetype"),
+  url("/fractal/fonts/flaticon.svg#Flaticon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 html {
   font-family: sans-serif;
   /* 1 */
